--- a/dashboard/src/i18n/locales/zh-CN/features/config.json
+++ b/dashboard/src/i18n/locales/zh-CN/features/config.json
@@ -5,7 +5,10 @@
     "visual": "可视化编辑",
     "code": "代码编辑",
     "revertCode": "回到更改前的代码",
+    "revertShort": "撤回",
     "applyConfig": "应用此配置",
+    "applyShort": "应用",
+    "tipShort": "提示",
     "applyTip": "`应用此配置` 将配置暂存并应用到可视化。如要保存，需再点击右下角保存按钮。"
   },
   "actions": {
