fix: 修正对话组相关的翻译错误

--- a/dashboard/src/i18n/locales/zh-CN/features/persona.json
+++ b/dashboard/src/i18n/locales/zh-CN/features/persona.json
@@ -9,10 +9,10 @@
     "delete": "删除",
     "cancel": "取消",
     "save": "保存",
-    "addDialogPair": "添加对话对"
+    "addDialogPair": "添加对话组"
   },
   "labels": {
-    "presetDialogs": "预设对话 ({count} 对)",
+    "presetDialogs": "预设对话 ({count} 组)",
     "createdAt": "创建时间",
     "updatedAt": "更新时间"
   },
