feat(update-dialog): 添加更新对话框组件及相关功能 fix(i18n): 更新中文和英文语言包以支持新的更新选项

--- a/dashboard/src/i18n/locales/en-US/core/header.json
+++ b/dashboard/src/i18n/locales/en-US/core/header.json
@@ -22,7 +22,9 @@
       "updating": "Updating..."
     },
     "tabs": {
-      "release": "😊 Release"
+      "release": "😊 Release",
+      "source": "Source Update",
+      "dashboard": "Dashboard Update"
     },
     "updateToLatest": "Update to Latest Version",
     "preRelease": "Pre-release",
