--- a/dashboard/src/i18n/locales/zh-CN/core/header.json
+++ b/dashboard/src/i18n/locales/zh-CN/core/header.json
@@ -22,7 +22,9 @@
       "updating": "正在更新..."
     },
     "tabs": {
-      "release": "😊 正式版"
+      "release": "😊 正式版",
+      "source": "源码更新",
+      "dashboard": "面板更新"
     },
     "updateToLatest": "更新到最新版本",
     "preRelease": "预发布",
