refactor: update references from LandfillBot to Nebula across the codebase

--- a/dashboard/src/i18n/locales/en-US/core/header.json
+++ b/dashboard/src/i18n/locales/en-US/core/header.json
@@ -60,8 +60,8 @@
     "channel": {
       "label": "Update channel",
       "official": "Official channel (AstrBot)",
-      "landfill": "LandfillBot channel",
-      "landfillTip": "This channel does not provide a releases list. It will update by downloading the latest source from the default branch.",
+      "nebula": "Nebula channel",
+      "nebulaTip": "This channel does not provide a releases list. It will update by downloading the latest source from the default branch.",
       "updateLatest": "Update"
     }
   },
