feat: 添加插件前端页面支持及相关路由配置

--- a/dashboard/src/i18n/locales/en-US/features/extension.json
+++ b/dashboard/src/i18n/locales/en-US/features/extension.json
@@ -51,6 +51,7 @@
   "tooltips": {
     "enable": "Click to Enable",
     "disable": "Click to Disable",
+    "openPage": "Open UI",
     "reload": "Reload",
     "configure": "Configure",
     "viewInfo": "Handlers",
