feat: 添加用户消息折叠功能，优化消息显示和复制操作

--- a/dashboard/src/i18n/locales/zh-CN/core/common.json
+++ b/dashboard/src/i18n/locales/zh-CN/core/common.json
@@ -18,6 +18,8 @@
   "author": "作者",
   "status": "状态",
   "actions": "操作",
+  "expand": "展开",
+  "collapse": "收起",
   "enable": "启用",
   "disable": "禁用",
   "enabled": "已启用",
