--- a/dashboard/src/i18n/locales/en-US/core/common.json
+++ b/dashboard/src/i18n/locales/en-US/core/common.json
@@ -18,6 +18,8 @@
   "author": "Author",
   "status": "Status",
   "actions": "Actions",
+  "expand": "Expand",
+  "collapse": "Collapse",
   "enable": "Enable",
   "disable": "Disable",
   "enabled": "Enabled",
