--- a/dashboard/src/i18n/locales/zh-CN/features/persona.json
+++ b/dashboard/src/i18n/locales/zh-CN/features/persona.json
@@ -10,7 +10,7 @@
     "cancel": "取消",
     "save": "保存",
     "move": "移动",
-    "addDialogPair": "添加对话对"
+    "addDialogPair": "添加对话组"
   },
   "labels": {
     "presetDialogs": "预设对话 ({count} 组)",
@@ -74,7 +74,7 @@
     "personasTitle": "人格",
     "toolsCount": "个工具",
     "contextMenu": {
-      "moveTo": "移动到..."
+      "moveTo": "移动"
     },
     "messages": {
       "moveSuccess": "人格移动成功",
@@ -98,7 +98,7 @@
     "contextMenu": {
       "open": "打开",
       "rename": "重命名",
-      "moveTo": "移动到...",
+      "moveTo": "移动",
       "delete": "删除"
     },
     "createDialog": {
