feat: enhance extension management with routing and localization updates

--- a/dashboard/src/i18n/locales/en-US/core/common.json
+++ b/dashboard/src/i18n/locales/en-US/core/common.json
@@ -104,6 +104,7 @@
     "disabled": "Disabled",
     "delete": "Delete",
     "edit": "Edit",
+    "copy": "Copy",
     "noData": "No data available"
   },
   "error404": {
