--- a/dashboard/src/i18n/locales/zh-CN/features/extension.json
+++ b/dashboard/src/i18n/locales/zh-CN/features/extension.json
@@ -2,8 +2,8 @@
   "title": "插件管理",
   "subtitle": "管理和配置系统插件",
   "tabs": {
-    "installedPlugins": "AstrBot 插件",
-    "market": "AstrBot 插件市场", 
+    "installedPlugins": "插件",
+    "market": "插件市场", 
     "installedMcpServers": "MCP",
     "skills": "Skills",
     "handlersOperation": "管理行为"
