feat: 添加编辑器错误处理，支持无效 JSON 提示

--- a/dashboard/src/i18n/locales/en-US/core/common.json
+++ b/dashboard/src/i18n/locales/en-US/core/common.json
@@ -75,7 +75,8 @@
   },
   "editor": {
     "fullscreen": "Fullscreen Edit",
-    "editingTitle": "Editing Content"
+    "editingTitle": "Editing Content",
+    "invalidJson": "Invalid JSON. Please fix the syntax before saving."
   },
   "templateList": {
     "addEntry": "Add Entry",
